# milg

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflows/: build.yml  clang-format.yml
data/: CMakeLists.txt  assets.json  compile_shaders.sh
data/maps/: desert.tmj
data/shaders/: common.glsl  composite.comp  distance_field.comp  noise_seed.comp  raytrace.comp  rt_upscale.comp  sprite_batch.frag  sprite_batch.vert  triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv  voronoi.comp  voronoi_seed.comp
engine/: CMakeLists.txt
engine/include/milg/: audio.hpp  graphics.hpp  milg.hpp
engine/include/milg/audio/: engine.hpp  sound.hpp  vocoder_node.hpp
engine/include/milg/core/: application.hpp  asset.hpp  asset_store.hpp  error.hpp  events.hpp  imgui_layer.hpp  types.hpp
engine/include/milg/graphics/: buffer.hpp  map.hpp  pipeline.hpp  sprite.hpp  sprite_batch.hpp  swapchain.hpp  texture.hpp  vk_context.hpp
engine/src/audio/: engine.cpp  sound.cpp  vocoder_node.cpp
engine/src/core/: application.cpp  asset.cpp  asset_store.cpp  imgui_layer.cpp  logging.cpp  window.cpp
engine/src/graphics/: buffer.cpp  map.cpp  pipeline.cpp  sprite_batch.cpp  swapchain.cpp  texture.cpp  vk_context.cpp
include/: CMakeLists.txt  milg.hpp
include/milg/: asset.hpp  asset_store.hpp  error.hpp  layer.hpp  map.hpp
projects/: CMakeLists.txt
projects/audio_playground/: CMakeLists.txt
projects/audio_playground/src/: main.cpp
projects/game/: CMakeLists.txt
projects/game/data/: CMakeLists.txt  assets.json
projects/game/data/maps/: desert.tmj  desert.tsj
projects/game/data/shaders/: common.glsl  sprite_batch.frag  sprite_batch.vert
projects/game/src/: main.cpp
projects/graphics_playground/: CMakeLists.txt
projects/graphics_playground/data/: CMakeLists.txt  assets.json
projects/graphics_playground/data/shaders/: voronoi.comp
projects/graphics_playground/src/: main.cpp
src/: CMakeLists.txt  application.cpp  application.hpp  asset.cpp  asset_store.cpp  asset_store.hpp  audio.cpp  audio.hpp  buffer.cpp  buffer.hpp  event.hpp  events.hpp  graphics_layer.cpp  imgui_layer.cpp  imgui_layer.hpp  lighting_main.cpp  logging.cpp  logging.hpp  main.cpp  map.cpp  pipeline.cpp  pipeline.hpp  sprite_batch.cpp  sprite_batch.hpp  swapchain.cpp  swapchain.hpp  texture.cpp  texture.hpp  vk_context.cpp  vk_context.hpp  window.cpp  window.hpp
src/audio/: CMakeLists.txt  audio.hpp  engine.cpp  engine.hpp  layer.cpp  layer.hpp  node.hpp  sound.cpp  sound.hpp  vocoder_node.cpp  vocoder_node.hpp
src/graphics/: buffer.cpp  buffer.hpp  pipeline.cpp  pipeline.hpp  sprite_batch.cpp  sprite_batch.hpp  swapchain.cpp  swapchain.hpp  texture.cpp  texture.hpp  vk_context.cpp  vk_context.hpp
